ajustes em codigo e documentação
